# VelocityRL

./: .gitignore  README.md  items.csv  package-lock.json  package.json  swapper.js  tsconfig.json
.github/workflows/: ci.yml  claude.yml  nightly.yml  release.yml  secrets.yml  update_items.yml
python/: cli.py  keys.txt  keys_map.json  rl_asset_swapper.py  rl_memory_patcher.py  rl_upk_editor.py
src/: assets.ts  index.ts  swapper.ts  upk.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_main.rs  csv_converter.rs  lib.rs
src-tauri/src/engine/: psynet.rs
src-tauri/src/upk/: compression.rs  crypto.rs  mod.rs  nametable.rs  parser.rs  reencrypt.rs  swapper.rs
ui/: index.html  main.js  overlay.css  overlay.html  overlay.js  style.css
