[package]
name = "velocity-rl"
version = "1.1.0"
description = "A Tauri App"
authors = ["bitsfdb"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
sha2 = "0.10.9"
hex = "0.4.3"
reqwest = { version = "0.13.3", features = ["json"] }
byteorder = "1.5"
aes = "0.8"
ecb = "0.1"
block-modes = "0.9"
minilzo-rs = "0.6"
tokio = { version = "1", features = ["full"] }
hmac = "0.12.1"
base64 = "0.22.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[[bin]]
name = "velocity-api"
path = "src/api_main.rs"
