[package]
name = "velocity-rl"
version = "1.2.2"
description = "A Tauri App"
authors = ["bitsfdb"]
license = "GNU license v3.0"
repository = "github.com/bitsfdb/VelocityRL.git"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.13.3", features = ["json"] }
# UPK engine (replaces PyInstaller binary)
aes = "0.8"
cipher = { version = "0.4", features = ["block-padding"] }
flate2 = "1.0"
base64 = { version = "0.22", features = [] }
